more build updates to fix build problems

--- a/VE_Xplorer/VE_GE/Makefile
+++ b/VE_Xplorer/VE_GE/Makefile
@@ -46,7 +46,8 @@ endif
 EXTRA_PATH_FOR_SOURCES+= $(VE_SUITE_HOME)/VE_Conductor/impl \
                         $(VE_SUITE_HOME)/VE_Open/skel \
                         $(VE_SUITE_HOME)/VE_Conductor/Framework \
-                        $(VE_SUITE_HOME)/VE_CE
+                        $(VE_SUITE_HOME)/VE_CE \
+                        $(VE_SUITE_HOME)/VE_Xplorer
 
 EXTRA_INCLUDES+= \
                -I$(VE_SUITE_HOME)
