commit to get build working on 64 bit platform

--- a/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
@@ -53,6 +53,7 @@ include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
 #add vtk stuff to EXTRA_INCLUDES and EXTRA_LIBS
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.boost.mk
 
 # -----------------------------------------------------------------------------
 # Application build targets.
