this commit add the functionality to run all of vesuite on mac os 10.4

--- a/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
+++ b/VE_Builder/vtkTo3DTexture/tcGUI/Makefile
@@ -65,7 +65,9 @@ cxx: $(OBJS)
 ${APP_NAME}: $(OBJS)
 	mkdir -p $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)
 	$(LINK) $(LINK_OUT)$@ $(OBJS) $(EXTRA_LIBS) $(LIBS)
-
+ifeq ($(CFDHOSTTYPE), Darwin)
+	$(shell wx-config --rezflags ) $(APP_NAME)
+endif
 #install:
 
 CLEAN_FILES+= $(APP_NAME)
