--- a/VE_Conductor/Framework/Makefile
+++ b/VE_Conductor/Framework/Makefile
@@ -1,6 +1,6 @@
 # Create the OS-dependent directory name
 CFDHOSTTYPE?=	$(DZR_HOSTTYPE)
-VE_SUITE_HOME?= ../
+VE_SUITE_HOME?= ../../
 
 APP_NAME= $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)/WinClient
 
@@ -8,11 +8,8 @@ VE_UI_HOME = ${VE_SUITE_HOME}/VE_Conductor/VE_UI
 IDL_HOME = ${VE_SUITE_HOME}/VE_Open
 
 all:
-	$(MAKE) -f $(VE_SUITE_HOME)/VE_Conductor/Network/Makefile.conductorlib
-	$(MAKE) -f $(VE_SUITE_HOME)/VE_Conductor/GUIPlugin/Makefile.guipluginlib
 	$(MAKE) NO_DEPEND=0 cxx
 	$(MAKE) $(APP_NAME)
-#	-$(MAKE) install
 
 srcdir= .
 
@@ -70,7 +67,11 @@ endif
 
 EXTRA_DEFS+=
 
+ifeq (${CFDHOSTTYPE},Darwin)
+#EXTRA_LDFLAGS+= -Wl
+else
 EXTRA_LDFLAGS+= -Wl,-E #-ldl -lrt -lc 
+endif
 EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_ConductorLib
 EXTRA_LIBS+= -lGUIPluginLib -lVE_XMLLib -lm -lpthread 
 
@@ -87,7 +88,7 @@ STATIC_ON= @APP_LINK_STATIC_ON@
 STATIC_OFF= @APP_LINK_STATIC_OFF@
 
 EXTRA_PATH_FOR_SOURCES+= $(VE_UI_HOME) $(IDL_HOME)/skel \
-                        ./Framework \
+                        $(VE_SUITE_HOME)/VE_Conductor/Framework \
                         $(VE_SUITE_HOME)/VE_Builder/Utilities/gui
 include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
 
@@ -107,9 +108,12 @@ cxx: $(OBJS)
 ${APP_NAME}: $(OBJS)
 	mkdir -p $(VE_SUITE_HOME)/bin/$(CFDHOSTTYPE)
 	$(LINK) $(LINK_OUT)$@ $(OBJS) $(EXTRA_LIBS) $(LIBS)
+ifeq ($(CFDHOSTTYPE), Darwin)
+	$(shell wx-config --rezflags ) $(APP_NAME)
+endif
 
 #install:
 #	cp NetworkTestBean.jar $(TWEEK_BASE_DIR)/bin/beans
 #	cp $(srcdir)/NetworkTestBean.xml $(TWEEK_BASE_DIR)/bin/beans
 
-CLEAN_FILES+= $(APP_NAME) && $(MAKE) -f $(VE_SUITE_HOME)/VE_Conductor/Network/Makefile.conductorlib clean && $(MAKE) -f $(VE_SUITE_HOME)/VE_Conductor/GUIPlugin/Makefile.guipluginlib clean
+CLEAN_FILES+= $(APP_NAME)
