build update for utilities in builder

--- a/VE_Builder/Utilities/mk/combineFluentParticleFile/Makefile
+++ b/VE_Builder/Utilities/mk/combineFluentParticleFile/Makefile
@@ -41,10 +41,11 @@ STATIC_OFF= @APP_LINK_STATIC_OFF@
 
 EXTRA_LIBS+=
 
-include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
+include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
 
 #add vtk stuff to EXTRA_INCLUDES and EXTRA_LIBS
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.boost.mk
 
 vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
 vpath %.cpp $(VE_SUITE_HOME)/VE_Builder/Translator
