--- a/VE_Builder/Utilities/mk/convertVTK2Binary/Makefile
+++ b/VE_Builder/Utilities/mk/convertVTK2Binary/Makefile
@@ -9,9 +9,6 @@ all:
 srcdir= ../../
 
 SRCS= \
-   fileIO.cxx \
-   readWriteVtkThings.cxx \
-   cfdVTKFileHandler.cxx \
    convertVTK2Binary.cpp 
 
 # Specify the OS-dependent directory name for object files and depends
@@ -42,12 +39,14 @@ LINKALL_OFF=
 STATIC_ON= @APP_LINK_STATIC_ON@
 STATIC_OFF= @APP_LINK_STATIC_OFF@
 
-EXTRA_LIBS+=
+EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE)
+EXTRA_LIBS+= -lVE_UtilLib
 
-include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
+include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
 
 #add vtk stuff to EXTRA_INCLUDES and EXTRA_LIBS
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.boost.mk
 
 vpath %.cxx $(VE_SUITE_HOME)/VE_Xplorer $(VE_SUITE_HOME)/VE_Builder/Translator
 vpath %.cpp $(VE_SUITE_HOME)/VE_Builder/Translator
