--- a/VE_Builder/Utilities/mk/whatIsScalarRange/Makefile
+++ b/VE_Builder/Utilities/mk/whatIsScalarRange/Makefile
@@ -8,9 +8,6 @@ all:
 
 srcdir=	../../
 SRCS=\
-   fileIO.cxx \
-   readWriteVtkThings.cxx \
-   cfdVTKFileHandler.cxx \
    cfdAccessoryFunctions.cxx \
    whatIsScalarRange.cpp 
 
@@ -32,6 +29,8 @@ EXTRA_DEFS+=
 
 EXTRA_INCLUDES+=	-I${VE_SUITE_HOME}/VE_Xplorer \
                   -I$(VE_SUITE_HOME)/VE_Builder/Translator
+EXTRA_LIBS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) 
+EXTRA_LIBS+= -lVE_UtilLib
 
 #EXTRA_DEBUG_FLAGS+=	-g -D_DEBUG
 #EXTRA_OPTIM_FLAGS+=	-O2 -OPT:Olimit=0 -D_OPT
@@ -44,7 +43,8 @@ STATIC_OFF=		@APP_LINK_STATIC_OFF@
 
 EXTRA_LIBS+=
 
-include $(VJ_BASE_DIR)/share/vrjuggler/vrj.appdefs.mk
+include $(DZR_BASE_DIR)/mk/dzr.basicapp.mk
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.boost.mk
 
 #add vtk stuff to EXTRA_INCLUDES and EXTRA_LIBS
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
