--- a/VE_Open/VE_XML/VE_CAD/VE_CAD.vcproj
+++ b/VE_Open/VE_XML/VE_CAD/VE_CAD.vcproj
@@ -41,7 +41,7 @@
 				GenerateDebugInformation="TRUE"
 				ProgramDatabaseFile="$(OutDir)/VE_CAD_d.pdb"
 				SubSystem="2"
-				ImportLibrary="$(OutDir)/VE_CAD.lib"
+				ImportLibrary="$(OutDir)/VE_CAD_d.lib"
 				TargetMachine="1"/>
 			<Tool
 				Name="VCMIDLTool"/>
@@ -136,7 +136,13 @@
 				RelativePath=".\CADNode.cxx">
 			</File>
 			<File
+				RelativePath=".\CADNodeTraverser.cxx">
+			</File>
+			<File
 				RelativePath=".\CADPart.cxx">
+			</File>
+			<File
+				RelativePath=".\CADXMLReader.cxx">
 			</File>
 		</Filter>
 		<Filter
@@ -156,7 +162,13 @@
 				RelativePath=".\CADNode.h">
 			</File>
 			<File
+				RelativePath=".\CADNodeTraverser.h">
+			</File>
+			<File
 				RelativePath=".\CADPart.h">
+			</File>
+			<File
+				RelativePath=".\CADXMLReader.h">
 			</File>
 		</Filter>
 		<Filter
