--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -113,7 +113,7 @@ $(shell mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE))
 
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vtk.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
-include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
+#include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.vpr.mk
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.gmtl.mk
 #include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.gadget.mk
