setting the parents on nodes in the graph

--- a/VE_Open/VE_XML/VE_CAD/Makefile
+++ b/VE_Open/VE_XML/VE_CAD/Makefile
@@ -38,7 +38,9 @@ SRCS=\
    CADClone.cxx\
    CADMaterial.cxx\
    CADNode.cxx\
-   CADPart.cxx
+   CADNodeTraverser.cxx\
+   CADPart.cxx\
+   CADXMLReader.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 DSO_PLUGIN_DEPS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_XMLLib
