added this reader to the build

--- a/VE_Open/VE_XML/Makefile
+++ b/VE_Open/VE_XML/Makefile
@@ -41,7 +41,8 @@ SRCS=\
    VEStateInfo.cxx\
    VETransform.cxx\
    VEUser.cxx\
-   VEXMLObject.cxx
+   VEXMLObject.cxx\
+   XMLReader.cxx
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
