--- a/VE_Builder/Translator/AVSTranslator/AVSTranslator.vcproj
+++ b/VE_Builder/Translator/AVSTranslator/AVSTranslator.vcproj
@@ -44,7 +44,8 @@
 			<Tool
 				Name="VCMIDLTool"/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCPostBuildEventTool"
+				CommandLine="copy $(TargetPath) %VE_SUITE_HOME%\bin\win32\$(TargetFileName)"/>
 			<Tool
 				Name="VCPreBuildEventTool"/>
 			<Tool
