--- a/VE_Open/VE_XML/VE_XML.vcproj
+++ b/VE_Open/VE_XML/VE_XML.vcproj
@@ -124,6 +124,9 @@
 			Filter="cpp;c;cxx;def;odl;idl;hpj;bat;asm;asmx"
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}">
 			<File
+				RelativePath=".\DOMDocumentManager.cxx">
+			</File>
+			<File
 				RelativePath=".\VECommand.cxx">
 			</File>
 			<File
@@ -155,6 +158,9 @@
 			Name="Header Files"
 			Filter="h;hpp;hxx;hm;inl;inc;xsd"
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}">
+			<File
+				RelativePath=".\DOMDocumentManager.h">
+			</File>
 			<File
 				RelativePath=".\VECommand.h">
 			</File>
