adding shader/program xsd. Didn't want it just in CAD becaus CAD isn't the only thing that can use shaders.

--- a/VE_Open/VE_XML/VE_XML.vcproj
+++ b/VE_Open/VE_XML/VE_XML.vcproj
@@ -195,6 +195,12 @@
 			UniqueIdentifier="{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}">
 			<File
 				RelativePath=".\verg.xsd">
+				<FileConfiguration
+					Name="dbg|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCXMLDataGeneratorTool"/>
+				</FileConfiguration>
 				<File
 					RelativePath=".\verg.xsx">
 				</File>
