new functionality to illustrate rtrc with juggler. the current code just resizes a window but once the new conductor ui is in place it can be extended to do stereo and alot more.

--- a/VE_Xplorer/VE_XplorerHandlers/Makefile
+++ b/VE_Xplorer/VE_XplorerHandlers/Makefile
@@ -67,6 +67,7 @@ SRCS=\
    cfdCuttingPlane.cxx \
    cfdDataSet.cxx \
    cfdDigitalAnalogGauge.cxx \
+   cfdDisplaySettings.cxx \
    cfdEnvironmentHandler.cxx \
    cfdFILE.cxx \
    cfdFileInfo.cxx \
