more updates for the new raw datatype containers. these classes should actually be templates i believe.

--- a/VE_Open/VE_XML/Makefile
+++ b/VE_Open/VE_XML/Makefile
@@ -37,6 +37,8 @@ SRCS=\
    VECommand.cxx\
    VEDataValuePair.cxx\
    VEFloatArray.cxx\
+   VE1DDoubleArray.cxx\
+   VE2DDoubleArray.cxx\
    VEParameterBlock.cxx\
    VEStateInfo.cxx\
    VETransform.cxx\
