new container classes for 3d arrays. again the containers classes need double checked to make sure that they make sense

--- a/VE_Open/VE_XML/Makefile
+++ b/VE_Open/VE_XML/Makefile
@@ -39,6 +39,7 @@ SRCS=\
    VEFloatArray.cxx\
    VE1DDoubleArray.cxx\
    VE2DDoubleArray.cxx\
+   VE3DDoubleArray.cxx\
    VEParameterBlock.cxx\
    VEStateInfo.cxx\
    VETransform.cxx\
