added more utility functions to aid in the contruction of xml data

--- a/VE_Open/VE_XML/Model/Makefile
+++ b/VE_Open/VE_XML/Model/Makefile
@@ -34,7 +34,8 @@ CFDUNAME = $(shell uname)
 #__________________________________________________________
 # list the source files that are in current directory
 SRCS=\
-   VEPoint.cxx
+   VEPoint.cxx\
+   VEPort.cxx
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
