adding back the GetSubElement function to VEXMLObject.cxx

--- a/VE_Open/VE_XML/VE_XML.vcproj
+++ b/VE_Open/VE_XML/VE_XML.vcproj
@@ -201,6 +201,12 @@
 					<Tool
 						Name="VCXMLDataGeneratorTool"/>
 				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="TRUE">
+					<Tool
+						Name="VCXMLDataGeneratorTool"/>
+				</FileConfiguration>
 				<File
 					RelativePath=".\verg.xsx">
 				</File>
