yet another class from verg_model.xsd

--- a/VE_Open/VE_XML/Model/Makefile
+++ b/VE_Open/VE_XML/Model/Makefile
@@ -35,7 +35,8 @@ CFDUNAME = $(shell uname)
 # list the source files that are in current directory
 SRCS=\
    VEPoint.cxx\
-   VEPort.cxx
+   VEPort.cxx\
+   VELink.cxx
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
