the last of the model stuff...we shall see if it really works...

--- a/VE_Open/VE_XML/Model/Makefile
+++ b/VE_Open/VE_XML/Model/Makefile
@@ -37,7 +37,8 @@ SRCS=\
    VEPoint.cxx\
    VEPort.cxx\
    VELink.cxx\
-   VENetwork.cxx
+   VENetwork.cxx\
+   VEModel.cxx
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
