updates to model schema and model handling capability to get the new conductor stuff to work properly

--- a/VE_Open/XML/Model/Makefile
+++ b/VE_Open/XML/Model/Makefile
@@ -38,7 +38,8 @@ SRCS=\
    Port.cxx\
    Link.cxx\
    Network.cxx\
-   Model.cxx
+   Model.cxx\
+   Tag.cxx
 
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
