corrected unix build errors

--- a/VE_Open/XML/Shader/Makefile
+++ b/VE_Open/XML/Shader/Makefile
@@ -35,7 +35,9 @@ CFDUNAME = $(shell uname)
 # list the source files that are in current directory
 SRCS=\
    TextureImage.cxx\
-   Uniform.cxx
+   Uniform.cxx\
+   Program.cxx\
+   Shader.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 DSO_PLUGIN_DEPS+= -L$(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE) -lVE_XMLLib
