new classes. build is broken because the network ate my last two hours of work so i will be redoing some of that right now. should be fixed within the next hour but wanted to check all of this in before it was lost again

--- a/VE_Open/XML/Makefile
+++ b/VE_Open/XML/Makefile
@@ -40,6 +40,10 @@ SRCS=\
    OneDDoubleArray.cxx\
    TwoDDoubleArray.cxx\
    ThreeDDoubleArray.cxx\
+   OneDIntArray.cxx\
+   TwoDIntArray.cxx\
+   ThreeDIntArray.cxx\
+   OneDStringArray.cxx\
    ParameterBlock.cxx\
    StateInfo.cxx\
    Transform.cxx\
