cleaning up the windows build

--- a/VE_Conductor/Framework/WinClient.vcproj
+++ b/VE_Conductor/Framework/WinClient.vcproj
@@ -549,6 +549,9 @@
 				RelativePath=".\OrbThread.h">
 			</File>
 			<File
+				RelativePath=".\package.h">
+			</File>
+			<File
 				RelativePath=".\paraThread.h">
 			</File>
 			<File
