updates to make new library build. should start implementing this library in conductor over the wekend which means that functionality for submitting jobs to ce will be broken. conductor should still build and can be used for testing new panes but ce functionality won't work.

--- a/VE_Conductor/Utilities/Makefile
+++ b/VE_Conductor/Utilities/Makefile
@@ -47,6 +47,7 @@ EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 $(shell mkdir -p $(VE_SUITE_HOME)/lib/$(CFDHOSTTYPE))
 
 include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.xerces.mk
+include $(VE_SUITE_HOME)/VE_Installer/mk/dzr.wx.mk
 
 # -----------------------------------------------------------------------------
 # following is adapted from tweek/test/NetworkTestBean/Makefile and tweek.appdefs.mk
