--- a/VE_Conductor/Utilities/Makefile
+++ b/VE_Conductor/Utilities/Makefile
@@ -33,10 +33,11 @@ CFDUNAME = $(shell uname)
 #__________________________________________________________
 # list the source files that are in current directory
 SRCS=\
-   Link.cxx \
-   Module.cxx \
-   Polygon.cxx \
-   Tag.cxx
+   Link.cxx\
+   Module.cxx\
+   Polygon.cxx\
+   Tag.cxx\
+   CADTreeBuilder.cxx
 			
 EXTRA_INCLUDES+= -I$(VE_SUITE_HOME)
 #EXTRA_INCLUDES+= -I$(VJ_DEPS_DIR)/include
